--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<reflections.version>0.9.10</reflections.version>
 		<commons.io.version>2.5</commons.io.version>
 		<netty.all.version>4.1.8.Final</netty.all.version>
+		<commons.codec.version>1.10</commons.codec.version>
 		<lombok.version>1.16.10</lombok.version>
 		<logback.version>1.1.7</logback.version>
 		<groovy.version>2.4.6</groovy.version>
@@ -26,6 +27,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>${commons.codec.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
