--- a/ezyfox-server-runner/pom.xml
+++ b/ezyfox-server-runner/pom.xml
@@ -6,18 +6,24 @@
 	<parent>
 		<groupId>com.tvd12</groupId>
 		<artifactId>ezyfox-server</artifactId>
-		<version>1.0.0</version>
+		<version>0.0.1</version>
 	</parent>
 	
 	<artifactId>ezyfox-server-runner</artifactId>
+	
+	<version>1.0.0</version>
 	<name>ezyfox-server-runner</name>
 	<url>http://maven.apache.org</url>
+	
+	<properties>
+		<codec.version>1.0.0</codec.version>
+	</properties>
 	
 	<dependencies>
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-server-codec</artifactId>
-			<version>${project.version}</version>
+			<version>${codec.version}</version>
 		</dependency>
 	</dependencies>
 </project>
