--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.tvd12</groupId>
 	<artifactId>ezyfox-server</artifactId>
-	<version>1.0.0</version>
+	<version>0.0.1</version>
 	<packaging>pom</packaging>
 
 	<name>ezyfox-server</name>
@@ -22,6 +22,8 @@
 		<lombok.version>1.16.10</lombok.version>
 		<logback.version>1.1.7</logback.version>
 		<groovy.version>2.4.6</groovy.version>
+		<jackson.version>2.8.6</jackson.version>
+		<properties.file.version>1.0.3</properties.file.version>
 		<directory.lib>lib</directory.lib>
 		<deploy.path>/Users/tavandung12/Documents/tvd12/java/deploy/ezyfox-server</deploy.path>
 	</properties>
@@ -40,12 +42,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.8.6</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>properties-file</artifactId>
-			<version>1.0.3</version>
+			<version>${properties.file.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -63,14 +65,6 @@
 			<version>${reflections.version}</version>
 		</dependency>
 		
-		<!-- codec -->
-		<dependency>
-		    <groupId>org.msgpack</groupId>
-		    <artifactId>msgpack</artifactId>
-		    <version>0.6.12</version>
-		</dependency>
-		
-
 		<!-- logback -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
