update to deploy 15/03/2017 2:41 PM

--- a/ezyfox-server-runner/pom.xml
+++ b/ezyfox-server-runner/pom.xml
@@ -26,4 +26,21 @@
 			<version>${codec.version}</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.tvd12.ezyfoxserver.EzyFoxRunner</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
