add io and security module 28/03/2017 5:12 PM

--- a/ezyfox-server-security/pom.xml
+++ b/ezyfox-server-security/pom.xml
@@ -8,18 +8,17 @@
 		<artifactId>ezyfox-server</artifactId>
 		<version>0.0.1</version>
 	</parent>
-
-	<artifactId>ezyfox-server-core</artifactId>
-
+	<artifactId>ezyfox-server-security</artifactId>
 	<version>1.0.0</version>
-	<name>ezyfox-server-core</name>
+	<name>ezyfox-server-security</name>
 	<url>http://maven.apache.org</url>
 	
 	<dependencies>
 		<dependency>
 			<groupId>com.tvd12</groupId>
-			<artifactId>ezyfox-server-security</artifactId>
+			<artifactId>ezyfox-server-io</artifactId>
 			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
+	
 </project>
