--- a/ezyfox-server-io/pom.xml
+++ b/ezyfox-server-io/pom.xml
@@ -8,18 +8,8 @@
 		<artifactId>ezyfox-server</artifactId>
 		<version>0.0.1</version>
 	</parent>
-
-	<artifactId>ezyfox-server-core</artifactId>
-
+	<artifactId>ezyfox-server-io</artifactId>
 	<version>1.0.0</version>
-	<name>ezyfox-server-core</name>
+	<name>ezyfox-server-io</name>
 	<url>http://maven.apache.org</url>
-	
-	<dependencies>
-		<dependency>
-			<groupId>com.tvd12</groupId>
-			<artifactId>ezyfox-server-security</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-	</dependencies>
 </project>
