--- a/pom.xml
+++ b/pom.xml
@@ -177,5 +177,6 @@
   <modules>
     <module>ezyfox-server-netty</module>
     <module>ezyfox-server-nettymsgpack</module>
+    <module>ezyfox-server-sfs2x</module>
   </modules>
 </project>
