fix ws not active 04/04/2017 12:58 PM

--- a/ezyfox-server-nettyrunner/pom.xml
+++ b/ezyfox-server-nettyrunner/pom.xml
@@ -21,6 +21,11 @@
 			<artifactId>ezyfox-server-netty</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.tvd12</groupId>
+			<artifactId>ezyfox-server-nettycodec</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
