--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,59 @@
 
 	<groupId>com.tvd12</groupId>
 	<artifactId>ezyfox-server</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2</version>
 	<packaging>pom</packaging>
 
 	<name>ezyfox-server</name>
-	<url>http://maven.apache.org</url>
+	<url>http://www.tvd12.com/java/projects/ezyfox-server</url>
+	<description>
+		Socket server 
+	</description>
+	
+	<organization>
+		<name>Young Monkeys</name>
+		<url>http://www.tvd12.com</url>
+	</organization>
+	
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	
+	<scm>
+		<connection>scm:git:git@github.com:youngmonkeys/ezyfox-server.git</connection>
+		<developerConnection>scm:git:git@github.com:youngmonkeys/ezyfox-server.git</developerConnection>
+		<url>https://github.com/youngmonkeys/ezyfox-server</url>
+	</scm>
+	
+	<issueManagement>
+		<system>Github</system>
+		<url>https://github.com/youngmonkeys/ezyfox-server/issues</url>
+	</issueManagement>
+
+	<ciManagement>
+		<system>travis</system>
+		<url>https://travis-ci.org/youngmonkeys/ezyfox-server</url>
+	</ciManagement>
+
+	<pluginRepositories>
+        <pluginRepository>
+            <id>oss.sonatype.org</id>
+            <url>https://oss.sonatype.org/content/groups/public</url>
+        </pluginRepository>
+    </pluginRepositories>
+    
+	<developers>
+		<developer>
+			<name>Ta Van Dung</name>
+			<email>itprono3@gmail.com</email>
+			<organization>Young Monkeys</organization>
+			<organizationUrl>http://www.tvd12.com</organizationUrl>
+		</developer>
+	</developers>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -121,6 +169,13 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.archetype</groupId>
+				<artifactId>archetype-packaging</artifactId>
+				<version>2.4</version>
+			</extension>
+		</extensions>
 	</build>
 	<profiles>
 		<profile>
@@ -173,5 +228,134 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>sonatype</id>
+			<distributionManagement>
+				<downloadUrl>https://oss.sonatype.org/content/groups/public</downloadUrl>
+		        <repository>
+		            <id>oss.sonatype.org</id>
+		            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+		        </repository>
+		        <snapshotRepository>
+		            <id>oss.sonatype.org</id>
+		            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		        </snapshotRepository>
+		        <site>
+		            <id>com.tvd12</id>
+		            <url>http://www.tvd12.com/</url>
+		        </site>
+			</distributionManagement>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <artifactId>maven-deploy-plugin</artifactId>
+                            <configuration>
+                                <skip>true</skip>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                        	<groupId>org.apache.maven.plugins</groupId>
+					        <artifactId>maven-release-plugin</artifactId>
+					        <version>2.5.3</version>
+                        </plugin>
+		                <plugin>
+		                    <artifactId>maven-deploy-plugin</artifactId>
+		                    <version>2.8.2</version>
+		                </plugin>
+		                <plugin>
+		                    <artifactId>maven-install-plugin</artifactId>
+		                    <version>2.5.2</version>
+		                    <configuration>
+		                        <createChecksum>true</createChecksum>
+		                    </configuration>
+		                </plugin>
+		                <plugin>
+		                    <artifactId>maven-jar-plugin</artifactId>
+		                    <version>2.6</version>
+		                </plugin>
+		                <plugin>
+		                    <artifactId>maven-javadoc-plugin</artifactId>
+		                    <version>2.10.3</version>
+		                </plugin>
+                    	<plugin>
+		                    <artifactId>maven-source-plugin</artifactId>
+		                    <version>2.4</version>
+		                </plugin>
+                    </plugins>
+                </pluginManagement>
+                <plugins>
+					<plugin>
+						<artifactId>maven-gpg-plugin</artifactId>
+				        <version>1.5</version>
+				        <executions>
+				          <execution>
+				            <id>sign-artifacts</id>
+				            <phase>verify</phase>
+				            <goals>
+				              <goal>sign</goal>
+				            </goals>
+				          </execution>
+				        </executions>
+				    </plugin>
+				    <plugin>
+				        <groupId>org.codehaus.mojo</groupId>
+				        <artifactId>versions-maven-plugin</artifactId>
+				        <version>2.1</version>
+				        <configuration>
+				          <generateBackupPoms>false</generateBackupPoms>
+				        </configuration>
+				    </plugin>
+                    <plugin>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>esa-sources</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <!--
+                        Generate -javadoc.jar artifact, required by Maven Central.
+                        -->
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>esa-javadoc</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <!-- @see http://www.sonatype.com/books/nexus-book/reference/staging-sect-deployment.html -->
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.7</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>oss.sonatype.org</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <description>${project.version}</description>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>deploy-to-sonatype</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>deploy</goal>
+                                    <goal>release</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 	</profiles>
 </project>
