update monitor and webapi

--- a/ezyfox-server-webapi/pom.xml
+++ b/ezyfox-server-webapi/pom.xml
@@ -15,6 +15,7 @@
 
 	<properties>
 		<ezy.core.version>1.0.0</ezy.core.version>
+		<ezy.monitor.version>1.0.0</ezy.monitor.version>
 		<ezy.databridge.version>1.0.0</ezy.databridge.version>
 		<springboot.version>1.5.4.RELEASE</springboot.version>
 	</properties>
@@ -36,6 +37,11 @@
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-server-core</artifactId>
 			<version>${ezy.core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.tvd12</groupId>
+			<artifactId>ezyfox-server-monitor</artifactId>
+			<version>${ezy.monitor.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.tvd12</groupId>
