--- a/ezyfox-server-monitor/pom.xml
+++ b/ezyfox-server-monitor/pom.xml
@@ -6,4 +6,6 @@
     <version>0.0.2</version>
   </parent>
   <artifactId>ezyfox-server-monitor</artifactId>
+  <version>1.0.0</version>
+  
 </project>
