--- a/ezyfox-server-webapi/pom.xml
+++ b/ezyfox-server-webapi/pom.xml
@@ -60,6 +60,18 @@
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-starter-tomcat</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+    					<artifactId>log4j-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+    					<artifactId>logback-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+    					<artifactId>logback-classic</artifactId>				
+				</exclusion>
 			</exclusions>
 		</dependency>
 
