--- a/ezyfox-server-core/pom.xml
+++ b/ezyfox-server-core/pom.xml
@@ -9,7 +9,7 @@
 		<version>0.0.2</version>
 	</parent>
 	<artifactId>ezyfox-server-core</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0</version> <!-- ${project.version} -->
 	<name>ezyfox-server-core</name>
 	<url>http://www.tvd12.com/java/projects/ezyfox-server</url>
 	<properties>
