--- a/ezyfox-server-nio/pom.xml
+++ b/ezyfox-server-nio/pom.xml
@@ -8,7 +8,7 @@
 		<version>0.0.2</version>
 	</parent>
 	<artifactId>ezyfox-server-nio</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0</version> <!-- ${project.version} -->
 
 	<name>ezyfox-server-nio</name>
 	<url>http://maven.apache.org</url>
