--- a/ezyfox-server-databridge/pom.xml
+++ b/ezyfox-server-databridge/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.0.2</version>
 	</parent>
 	<artifactId>ezyfox-server-databridge</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0</version> <!-- ${project.version} -->
 	<name>ezyfox-server-databridge</name>
 	
 	<properties>
