--- a/ezyfox-server-boot/pom.xml
+++ b/ezyfox-server-boot/pom.xml
@@ -7,20 +7,16 @@
 		<version>0.0.2</version>
 	</parent>
 	<artifactId>ezyfox-server-boot</artifactId>
-	<version>1.1.1</version> <!-- ${project.version} -->
+	<version>1.1.2</version> <!-- ${project.version} -->
 
 	<name>ezyfox-server-boot</name>
 	<url>http://www.tvd12.com/java/projects/ezyfox-server</url>
-	
-	<properties>
-		<ezy.core.version>1.1.1</ezy.core.version>
-	</properties>
 	
 	<dependencies>
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-server-core</artifactId>
-			<version>${ezy.core.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 	
