--- a/ezyfox-server-nio/pom.xml
+++ b/ezyfox-server-nio/pom.xml
@@ -8,13 +8,12 @@
 		<version>0.0.2</version>
 	</parent>
 	<artifactId>ezyfox-server-nio</artifactId>
-	<version>1.1.1</version> <!-- ${project.version} -->
+	<version>1.1.2</version> <!-- ${project.version} -->
 
 	<name>ezyfox-server-nio</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<ezy.boot.version>1.1.1</ezy.boot.version>
 		<jetty.version>9.4.22.v20191022</jetty.version>
 	</properties>
 
@@ -22,7 +21,7 @@
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-server-boot</artifactId>
-			<version>${ezy.boot.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty.websocket</groupId>
