--- a/ezyfox-server-niorunner/pom.xml
+++ b/ezyfox-server-niorunner/pom.xml
@@ -8,20 +8,16 @@
 		<version>0.0.2</version>
 	</parent>
 	<artifactId>ezyfox-server-niorunner</artifactId>
-	<version>1.1.1</version> <!-- ${project.version} -->
+	<version>1.1.2</version> <!-- ${project.version} -->
 
 	<name>ezyfox-server-niorunner</name>
 	<url>http://maven.apache.org</url>
-
-	<properties>
-		<ezy.nio.version>1.1.1</ezy.nio.version>
-	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-server-nio</artifactId>
-			<version>${ezy.nio.version}</version>
+			<version>${project.version}</version>
 		</dependency>	
 	</dependencies>
 
