--- a/ezyfox-server-core/pom.xml
+++ b/ezyfox-server-core/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<ezy.codec.version>1.1.3</ezy.codec.version>
 		<ezy.mapping.version>1.1.3</ezy.mapping.version>
+		<ezy.tools.version>1.1.3</ezy.tools.version>
 	</properties>
 
 	<dependencies>
@@ -28,6 +29,12 @@
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-mapping</artifactId>
 			<version>${ezy.mapping.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.tvd12</groupId>
+			<artifactId>ezyfox-tools</artifactId>
+			<version>${ezy.tools.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
