--- a/ezyfox-server-embedded/pom.xml
+++ b/ezyfox-server-embedded/pom.xml
@@ -8,7 +8,7 @@
 		<version>0.0.2</version>
 	</parent>
 	<artifactId>ezyfox-server-embedded</artifactId>
-	<version>1.1.4</version> <!-- ${project.version} -->
+	<version>1.1.3</version>
 
 	<name>ezyfox-server-embedded</name>
 	<url>http://maven.apache.org</url>
