--- a/ezyfox-server-core/pom.xml
+++ b/ezyfox-server-core/pom.xml
@@ -9,14 +9,14 @@
 		<version>0.0.3</version>
 	</parent>
 	<artifactId>ezyfox-server-core</artifactId>
-	<version>1.1.4</version> <!-- ${project.version} -->
+	<version>1.1.5</version> <!-- ${project.version} -->
 	<name>ezyfox-server-core</name>
-	<url>http://www.tvd12.com/java/projects/ezyfox-server</url>
+	<url>https://youngmonkeys.org/project/ezyfox-sever/</url>
 	
 	<properties>
-		<ezy.codec.version>1.1.4</ezy.codec.version>
-		<ezy.mapping.version>1.1.4</ezy.mapping.version>
-		<ezy.tools.version>1.1.4</ezy.tools.version>
+		<ezy.codec.version>1.1.5</ezy.codec.version>
+		<ezy.mapping.version>1.1.5</ezy.mapping.version>
+		<ezy.tools.version>1.1.5</ezy.tools.version>
 	</properties>
 
 	<dependencies>
