--- a/ezyfox-server-embedded/pom.xml
+++ b/ezyfox-server-embedded/pom.xml
@@ -8,10 +8,10 @@
 		<version>0.0.3</version>
 	</parent>
 	<artifactId>ezyfox-server-embedded</artifactId>
-	<version>1.1.4</version>
+	<version>1.1.5</version>
 
 	<name>ezyfox-server-embedded</name>
-	<url>http://maven.apache.org</url>
+	<url>https://youngmonkeys.org/project/ezyfox-sever/</url>
 
 	<dependencies>
 		<dependency>
