--- a/ezyfox-server-nio/pom.xml
+++ b/ezyfox-server-nio/pom.xml
@@ -8,10 +8,10 @@
 		<version>0.0.3</version>
 	</parent>
 	<artifactId>ezyfox-server-nio</artifactId>
-	<version>1.1.4</version> <!-- ${project.version} -->
+	<version>1.1.5</version> <!-- ${project.version} -->
 
 	<name>ezyfox-server-nio</name>
-	<url>http://maven.apache.org</url>
+	<url>https://youngmonkeys.org/project/ezyfox-sever/</url>
 
 	<properties>
 		<jetty.version>9.4.22.v20191022</jetty.version>
