--- a/ezyfox-server-support/pom.xml
+++ b/ezyfox-server-support/pom.xml
@@ -7,14 +7,14 @@
 		<version>0.0.3</version>
 	</parent>
 	<artifactId>ezyfox-server-support</artifactId>
-	<version>1.1.4</version> <!-- ${project.version} -->
+	<version>1.1.5</version> <!-- ${project.version} -->
 	<name>ezyfox-server-support</name>
-	<url>http://www.tvd12.com/java/projects/ezyfox-server</url>
+	<url>https://youngmonkeys.org/project/ezyfox-sever/</url>
 	
 	<properties>
 		<ezy.core.version>2.0.2</ezy.core.version>
-		<ezy.bean.version>1.1.4</ezy.bean.version>
-		<ezy.binding.version>1.1.4</ezy.binding.version>
+		<ezy.bean.version>1.1.5</ezy.bean.version>
+		<ezy.binding.version>1.1.5</ezy.binding.version>
 	</properties>
 	
 	<dependencies>
