--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.tvd12</groupId>
 		<artifactId>ezyfox</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2</version>
 	</parent>
 	<artifactId>ezyfox-server</artifactId>
 	<packaging>pom</packaging>
@@ -53,4 +53,9 @@
 			<organizationUrl>https://youngmonkeys.org/</organizationUrl>
 		</developer>
 	</developers>
+	
+	<properties>
+		<ezy.version>1.2.1</ezy.version>
+		<ezy.core.version>2.1.2</ezy.core.version>
+	</properties>
 </project>
