--- a/ezyfox-server-core/pom.xml
+++ b/ezyfox-server-core/pom.xml
@@ -6,10 +6,9 @@
 	<parent>
 		<groupId>com.tvd12</groupId>
 		<artifactId>ezyfox-server</artifactId>
-		<version>1.0.3</version>
+		<version>1.2.3</version>
 	</parent>
 	<artifactId>ezyfox-server-core</artifactId>
-	<version>1.2.3</version> <!-- ${project.version} -->
 	<name>ezyfox-server-core</name>
 	<url>https://youngmonkeys.org/project/ezyfox-sever/</url>
 	
@@ -17,17 +16,17 @@
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-codec</artifactId>
-			<version>${ezy.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-mapping</artifactId>
-			<version>${ezy.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-tools</artifactId>
-			<version>${ezy.version}</version>
+			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
