--- a/ezyfox-server-embedded/pom.xml
+++ b/ezyfox-server-embedded/pom.xml
@@ -5,10 +5,9 @@
 	<parent>
 		<groupId>com.tvd12</groupId>
 		<artifactId>ezyfox-server</artifactId>
-		<version>1.0.3</version>
+		<version>1.2.3</version>
 	</parent>
 	<artifactId>ezyfox-server-embedded</artifactId>
-	<version>1.2.3</version>
 
 	<name>ezyfox-server-embedded</name>
 	<url>https://youngmonkeys.org/project/ezyfox-sever/</url>
@@ -27,12 +26,12 @@
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-msgpack</artifactId>
-			<version>${ezy.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-jackson</artifactId>
-			<version>${ezy.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
