--- a/ezyfox-server-support/pom.xml
+++ b/ezyfox-server-support/pom.xml
@@ -4,10 +4,9 @@
 	<parent>
 		<groupId>com.tvd12</groupId>
 		<artifactId>ezyfox-server</artifactId>
-		<version>1.0.3</version>
+		<version>1.2.3</version>
 	</parent>
 	<artifactId>ezyfox-server-support</artifactId>
-	<version>1.2.3</version> <!-- ${project.version} -->
 	<name>ezyfox-server-support</name>
 	<url>https://youngmonkeys.org/project/ezyfox-sever/</url>
 	
@@ -20,12 +19,12 @@
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-bean</artifactId>
-			<version>${ezy.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.tvd12</groupId>
 			<artifactId>ezyfox-binding</artifactId>
-			<version>${ezy.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.tvd12</groupId>
