--- a/ezyfox-server-core/settings/ssl-config.properties
+++ b/ezyfox-server-core/settings/ssl-config.properties
@@ -1,3 +1,3 @@
-ssl.keystore="ssl/ssl-key-store.txt"
+ssl.keystore=ssl/ssl-keystore.txt
 ssl.keystore_password=ssl/ssl-keystore-password.txt
 ssl.certificate_password=ssl/ssl-certificate-password.txt
