--- a/ezyfox-server-core/pom.xml
+++ b/ezyfox-server-core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.tvd12</groupId>
         <artifactId>ezyfox-server</artifactId>
-        <version>1.2.8</version>
+        <version>1.2.8.1</version>
     </parent>
     <artifactId>ezyfox-server-core</artifactId>
     <name>ezyfox-server-core</name>
@@ -16,17 +16,17 @@
         <dependency>
             <groupId>com.tvd12</groupId>
             <artifactId>ezyfox-codec</artifactId>
-            <version>${project.version}</version>
+            <version>${ezy.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tvd12</groupId>
             <artifactId>ezyfox-mapping</artifactId>
-            <version>${project.version}</version>
+            <version>${ezy.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tvd12</groupId>
             <artifactId>ezyfox-tools</artifactId>
-            <version>${project.version}</version>
+            <version>${ezy.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
