--- a/ezyfox-server-support/pom.xml
+++ b/ezyfox-server-support/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.tvd12</groupId>
         <artifactId>ezyfox-server</artifactId>
-        <version>1.2.8</version>
+        <version>1.2.8.1</version>
     </parent>
     <artifactId>ezyfox-server-support</artifactId>
     <name>ezyfox-server-support</name>
@@ -19,12 +19,12 @@
         <dependency>
             <groupId>com.tvd12</groupId>
             <artifactId>ezyfox-bean</artifactId>
-            <version>${project.version}</version>
+            <version>${ezy.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tvd12</groupId>
             <artifactId>ezyfox-binding</artifactId>
-            <version>${project.version}</version>
+            <version>${ezy.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tvd12</groupId>
